--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -33,12 +33,11 @@ jobs:
         run:  docker compose up -d
       - name: Test with Gradle
         run: ./gradlew test
-      - name: Upload Test Report
-        uses: actions/upload-artifact@v1
-        if: always()
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: always() # always run even if the previous step fails
         with:
-          name: test results
-          path: build/reports/tests/test
+          report_paths: '**/build/test-results/test/TEST-*.xml'
       - name: Slack Notification on Success
         if: success()
         uses: rtCamp/action-slack-notify@v2
