--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -42,13 +42,13 @@ jobs:
         if: success()
         uses: rtCamp/action-slack-notify@v2
         env:
-          SLACK_ICON: https://avatars.githubusercontent.com/t/5814246?s=280&v=4
+          SLACK_ICON: https://github.com/rtCamp.png?size=48
           SLACK_TITLE: Test Success
           SLACK_COLOR: good
       - name: Slack Notification on Failure
         if: failure()
         uses: rtCamp/action-slack-notify@v2
         env:
-          SLACK_ICON: https://avatars.githubusercontent.com/t/5814246?s=280&v=4
+          SLACK_ICON: https://github.com/rtCamp.png?size=48
           SLACK_TITLE: Test Failure
           SLACK_COLOR: danger
