--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -38,17 +38,49 @@ jobs:
         if: always() # always run even if the previous step fails
         with:
           report_paths: '**/build/test-results/test/TEST-*.xml'
-      - name: Slack Notification on Success
-        if: success()
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_ICON: https://github.com/rtCamp.png?size=48
-          SLACK_TITLE: Test Success
-          SLACK_COLOR: good
-      - name: Slack Notification on Failure
-        if: failure()
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_ICON: https://github.com/rtCamp.png?size=48
-          SLACK_TITLE: Test Failure
-          SLACK_COLOR: danger
+      - name: Slack Notification
+        if: always()
+        run: |
+          if [[ ${{ job.status }} == "success" ]]; then
+            COLOR="good"
+          else
+            COLOR="danger"
+          fi
+  
+          jq -n --arg color "${COLOR}" \
+          --arg jobLink '<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} | ${{ github.workflow }}>' \
+          --arg commit '<${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }} | ${{ github.sha }}>' '{
+            attachments: [
+              {
+                pretext: ":github: Test ${{ job.status }} :バナナ:",
+                color: $color,
+                fields: [
+                  {
+                    title: "Actor",
+                    value: "'"$GITHUB_ACTOR"'",
+                    short: true
+                  },
+                  {
+                    title: "Ref",
+                    value: "'"$GITHUB_REF"'",
+                    short: true
+                  },
+                  {
+                    title: "Event Name",
+                    value: "'"$GITHUB_EVENT_NAME"'",
+                    short: true
+                  },
+                  {
+                    title: "Actions URL",
+                    value: $jobLink,
+                    short: true
+                  },
+                  {
+                    title: "Commit",
+                    value: $commit,
+                    short: false
+                  }
+                ]
+              }
+            ]
+          }' | curl ${{ secrets.SLACK_INCOMING_WEBHOOK_URL }} -X POST -H 'Content-Type: application/json' -d @-
