--- a/.github/workflows/test-checkstyle-spotbugs-ci.yml
+++ b/.github/workflows/test-checkstyle-spotbugs-ci.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Test & Checkstyle CI
+name: Test & Checkstyle & SpotBugs CI
 
 on:
   workflow_dispatch:
@@ -45,6 +45,14 @@ jobs:
           reporter: 'github-pr-check'
           workdir: 'src/main'
           tool_name: 'Checkstyle'
+      - name: Run SpotBugs
+        run: ./gradlew spotbugsMain
+      - name: Upload SpotBugs Report
+        uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: test results
+          path: build/reports/spotbugs/main.html
       - name: Slack Notification
         if: always()
         run: |
