--- a/.github/workflows/spotbugs-ci.yml
+++ b/.github/workflows/spotbugs-ci.yml
@@ -1,11 +1,4 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
-name: Test & Checkstyle & SpotBugs CI
+name: SpotBugs CI
 
 on:
   workflow_dispatch:
@@ -27,24 +20,6 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: 'gradle'
-      - name: Docker run
-        run: docker compose up -d
-      - name: Test with Gradle
-        run: ./gradlew test
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v3
-        if: always() # always run even if the previous step fails
-        with:
-          report_paths: '**/build/test-results/test/TEST-*.xml'
-      - name: Run check style
-        uses: nikitasavinov/checkstyle-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          checkstyle_config: 'config/checkstyle/checkstyle.xml'
-          level: 'error'
-          reporter: 'github-pr-check'
-          workdir: 'src/main'
-          tool_name: 'Checkstyle'
       - name: Run SpotBugs
         run: ./gradlew spotbugsMain
       - name: Upload SpotBugs Report
