--- a/.github/workflows/test-checkstyle-spotbugs-ci.yml
+++ b/.github/workflows/test-checkstyle-spotbugs-ci.yml
@@ -1,4 +1,4 @@
-name: SpotBugs CI
+name: Test & Checkstyle & SpotBugs CI
 
 on:
   workflow_dispatch:
@@ -20,8 +20,26 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: 'gradle'
+      - name: Docker run
+        run: docker compose up -d
+      - name: Test with Gradle
+        run: ./gradlew test
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: always() # always run even if the previous step fails
+        with:
+          report_paths: '**/build/test-results/test/TEST-*.xml'
+      - name: Run check style
+        uses: nikitasavinov/checkstyle-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          checkstyle_config: 'config/checkstyle/checkstyle.xml'
+          level: 'error'
+          reporter: 'github-pr-check'
+          workdir: 'src/main'
+          tool_name: 'Checkstyle'
       - name: Run SpotBugs
-        run: ./gradlew check
+        run: ./gradlew spotbugsMain
       - name: Upload SpotBugs Report
         uses: actions/upload-artifact@v1
         if: always()
