--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation group: 'com.github.database-rider', name: 'rider-spring', version: '1.33.0'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
     compileOnly "com.github.spotbugs:spotbugs:4.6.0"
     spotbugsPlugins "com.mebigfatguy.fb-contrib:fb-contrib:7.4.7"
 }
