--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ dependencies {
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
-    compileOnly "com.github.spotbugs:spotbugs:4.6.0"
+    implementation 'net.javacrumbs.json-unit:json-unit-spring:2.35.0'
+    compileOnly 'com.github.spotbugs:spotbugs:4.7.1'
     spotbugsPlugins "com.mebigfatguy.fb-contrib:fb-contrib:7.4.7"
 }
 
