--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation group: 'com.github.database-rider', name: 'rider-spring', version: '1.33.0'
+    implementation 'net.javacrumbs.json-unit:json-unit-spring:2.35.0'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
@@ -34,7 +35,7 @@ dependencies {
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
-    implementation 'net.javacrumbs.json-unit:json-unit-spring:2.35.0'
+    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.12.4'
     compileOnly 'com.github.spotbugs:spotbugs:4.7.1'
     spotbugsPlugins "com.mebigfatguy.fb-contrib:fb-contrib:7.4.7"
 }
